NXP-29984: migrate SuggestionService to use xmap registries