@@ -18,15 +18,18 @@
  */
 package org.nuxeo.ecm.platform.suggestbox.service.descriptors;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
 import org.nuxeo.common.xmap.annotation.XNode;
 import org.nuxeo.common.xmap.annotation.XNodeMap;
 import org.nuxeo.common.xmap.annotation.XObject;
+import org.nuxeo.common.xmap.registry.XEnable;
+import org.nuxeo.common.xmap.registry.XRegistry;
+import org.nuxeo.common.xmap.registry.XRegistryId;
 import org.nuxeo.ecm.platform.suggestbox.service.ComponentInitializationException;
 import org.nuxeo.ecm.platform.suggestbox.service.Suggester;
-import org.nuxeo.runtime.model.RuntimeContext;
 
 /**
  * XMap descriptor for registering overridable parameterized Suggester implementation on the SuggesterService.
@@ -34,91 +37,43 @@ import org.nuxeo.runtime.model.RuntimeContext;
  * @author ogrisel
  */
 @XObject("suggester")
-public class SuggesterDescriptor implements Cloneable {
+@XRegistry(enable = false)
+public class SuggesterDescriptor {
 
-    @XNode("@name")
-    protected String name = "default";
+    @XNode(value = "@name", defaultAssignment = "default")
+    @XRegistryId
+    protected String name;
 
     @XNode("@class")
-    protected String className;
+    protected Class<? extends Suggester> suggesterClass;
 
-    @XNode("@enabled")
-    protected boolean enabled = true;
+    @XNode(value = XEnable.ENABLE, fallback = "@enabled")
+    @XEnable
+    protected boolean enabled;
 
     @XNodeMap(value = "parameters/parameter", key = "@name", type = HashMap.class, componentType = String.class)
-    protected Map<String, String> parameters = new HashMap<>();
+    protected Map<String, String> parameters;
 
     protected Suggester suggester;
-
-    protected RuntimeContext runtimeContext;
 
     public String getName() {
         return name;
     }
 
-    public boolean isEnabled() {
-        return enabled;
-    }
-
     public Map<String, String> getParameters() {
-        return parameters;
+        return Collections.unmodifiableMap(parameters);
     }
 
-    public void setRuntimeContext(RuntimeContext context) throws ComponentInitializationException {
-        // store the runtime context for later usage if a merge is required
-        this.runtimeContext = context;
-        loadParameterizedSuggester();
-    }
-
-    protected void loadParameterizedSuggester() throws ComponentInitializationException {
-        if (enabled && className != null) {
-            // try build the suggester instance as early as possible to throw
-            // errors at deployment time rather than lazily at first access time
-            // by the user: fail early.
-            try {
-                suggester = (Suggester) runtimeContext.loadClass(className).newInstance();
-            } catch (ReflectiveOperationException e) {
-                throw new ComponentInitializationException(String.format(
-                        "Failed to initialize suggester '%s' with class '%s'", name, className), e);
-            }
-            suggester.initWithParameters(this);
+    public Suggester getSuggester() throws ComponentInitializationException {
+        try {
+            suggester = suggesterClass.getDeclaredConstructor().newInstance();
+        } catch (ReflectiveOperationException e) {
+            throw new ComponentInitializationException(
+                    String.format("Failed to initialize suggester '%s' with class '%s'", name, suggesterClass), e);
         }
-        // if the the descriptor is enabled but does not provide any
-        // contrib this is probably just for overriding some parameters
-        // handled at merge time
-    }
+        suggester.initWithParameters(this);
 
-    public Suggester getSuggester() {
         return suggester;
-    }
-
-    public void mergeFrom(SuggesterDescriptor newDescriptor) throws ComponentInitializationException {
-        if (name == null || !name.equals(newDescriptor.name)) {
-            throw new RuntimeException("Cannot merge descriptor with name '" + name
-                    + "' with another descriptor with different name " + newDescriptor.getName() + "'");
-        }
-        if (className == null) {
-            if (enabled && newDescriptor.className == null) {
-                throw new RuntimeException("Cannot merge descriptor with name '" + name
-                        + "' with source a source version that has no" + " className defined.");
-            }
-            className = newDescriptor.className;
-            runtimeContext = newDescriptor.runtimeContext;
-        }
-        // merged the parameters
-        Map<String, String> mergedParameters = new HashMap<>();
-        mergedParameters.putAll(parameters);
-        mergedParameters.putAll(newDescriptor.parameters);
-        parameters = mergedParameters;
-        loadParameterizedSuggester();
-    }
-
-    /*
-     * Override the Object.clone to make it public
-     */
-    @Override
-    public Object clone() throws CloneNotSupportedException {
-        return super.clone();
     }
 
 }
